Added support for SimpleURLContent